--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-http-request": "^2.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "styled-components": "^4.1.2"
+    "styled-components": "^4.1.2",
+    "rest": "^1.3.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.2",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
+    "watch": "webpack --watch -d",
     "dev": "react-scripts start",
     "start": "serve -s build",
     "build": "react-scripts build",
